--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,9 @@
 main:
   #- title: "Publications"
   #  url: /publications/     
+
+  - title: "About"
+    url: /  
     
   - title: "Portfolio"
     url: /portfolio/
